@@ -26,7 +26,8 @@
 /**
  * RecordCompilationTests
  *
- * @test 8250629 8252307 8247352 8241151
+ * @test
+ * @bug 8250629 8252307 8247352 8241151 8246774
  * @summary Negative compilation tests, and positive compilation (smoke) tests for records
  * @library /lib/combo /tools/lib /tools/javac/lib
  * @modules
@@ -35,9 +36,8 @@
  *      jdk.compiler/com.sun.tools.javac.util
  *      jdk.jdeps/com.sun.tools.classfile
  * @build JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} RecordCompilationTests.java
- * @run testng/othervm -DuseAP=false --enable-preview RecordCompilationTests
- * @run testng/othervm -DuseAP=true --enable-preview RecordCompilationTests
+ * @run testng/othervm -DuseAP=false RecordCompilationTests
+ * @run testng/othervm -DuseAP=true RecordCompilationTests
  */
 
 import java.io.File;
@@ -119,17 +119,7 @@ import static org.testng.Assert.assertEquals;
 
 @Test
 public class RecordCompilationTests extends CompilationTestCase {
-    // @@@ When records become a permanent feature, we don't need these any more
-    private static String[] PREVIEW_OPTIONS = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature())
-    };
-
-    private static String[] PREVIEW_OPTIONS_WITH_AP = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature()),
-            "-processor", SimplestAP.class.getName()
-    };
+    private static String[] OPTIONS_WITH_AP = {"-processor", SimplestAP.class.getName()};
 
     private static final List<String> BAD_COMPONENT_NAMES = List.of(
             "clone", "finalize", "getClass", "hashCode",
@@ -150,7 +140,9 @@ public class RecordCompilationTests extends CompilationTestCase {
     public RecordCompilationTests() {
         useAP = System.getProperty("useAP", "false").equals("true");
         setDefaultFilename("R.java");
-        setCompileOptions(useAP ? PREVIEW_OPTIONS_WITH_AP : PREVIEW_OPTIONS);
+        if (useAP) {
+            setCompileOptions(OPTIONS_WITH_AP);
+        }
         System.out.println(useAP ? "running all tests using an annotation processor" : "running all tests without annotation processor");
     }
 
@@ -1010,7 +1002,7 @@ public class RecordCompilationTests extends CompilationTestCase {
         String[] previousOptions = getCompileOptions();
         String[] testOptions = {/* no options */};
         setCompileOptions(testOptions);
-        assertOKWithWarning("compiler.warn.restricted.type.not.allowed.preview",
+        assertFail("compiler.err.illegal.start.of.type",
                 "class R {\n" +
                 "    record RR(int i) {\n" +
                 "        return null;\n" +
@@ -1062,8 +1054,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         );
 
         String[] generalOptions = {
-                "--enable-preview",
-                "-source", Integer.toString(Runtime.version().feature()),
                 "-processor", Processor.class.getName(),
                 "-Atargets="
         };
